<resources>
    <string name="app_name">maxapp</string>
    <string name="str_clientes">Clientes</string>
    <string name="str_pedidos">Pedidos</string>
    <string name="str_resumoVendas">Resumo de vendas</string>
    <string name="str_ferramentas">Ferramentas</string>
    <string name="str_dadosCliente">Dados do cliente</string>
    <string name="strCPF">CPF: </string>
    <string name="strCNPJ">CNPJ:</string>
    <string name="strRamoAtividade">Ramo de Atividade: </string>
    <string name="str_enderecos">Endereços:</string>
    <string name="str_contatos">Contatos</string>
    <string name="str_telefone">Telefone:</string>
    <string name="str_email">E-mail:</string>
    <string name="str_celular">Celular:</string>
    <string name="str_dataNasc">Data Nasc:</string>
    <string name="str_conjuge">Cônjuge:</string>
    <string name="str_dtNascConjuge">Data Nasc. Cônjuge:</string>
    <string name="str_NaoInformado">Não Informado</string>
    <string name="str_tipo">Tipo:</string>
    <string name="str_time">Time:</string>
    <string name="verificarStatusCliente">Verificar status do cliente</string>
    <string name="str_dados">Dados</string>
    <string name="str_historico">Hist. pedidos</string>
    <string name="str_alvaras">Alvarás</string>
    <string name="str_fechar">FECHAR</string>
    <string name="str_legendas">Legendas</string>
    <string name="legenda_statusoPddErp">Status do pedido no ERP</string>
    <string name="legenda_statusEmProcessamento">Em processamento por parte do FV</string>
    <string name="legenda_statusRecusadoErp">Pedido recusado pelo ERP</string>
    <string name="legenda_statusPosicaoErp">Posição no ERP Pendente</string>
    <string name="legenda_statusPosicaoBloqueadoErp">Posição no ERP Bloqueado</string>
    <string name="legenda_statusPosicaoLiberadoErp">Posição no ERP Liberado</string>
    <string name="legenda_statusPosicaoMontadoErp">Posição no ERP Montado</string>
    <string name="legenda_statusPosicaoFaturadoErp">Posição no ERP Faturado</string>
    <string name="legenda_statusPosicaoCanceladoErp">Posição no ERP Cancelado</string>
    <string name="legenda_statusPosicaoOrcamentoErp">Orçamento</string>
    <string name="str_critica">Crítica</string>
    <string name="legenda_criticaAguardandoRetorno">Aguardando retorno do ERP</string>
    <string name="legenda_criticaSucesso">Sucesso</string>
    <string name="legenda_criticaFalhaParcial">Falha parcial</string>
    <string name="legenda_sofreuCorte">Pedido sofreu corte</string>
    <string name="legenda_pedidoFalta">Pedido com falta</string>
    <string name="legenda_pedidoCancelado">Pedido cancelado no ERP</string>
    <string name="legenda_pedidoDevolucao">Pedido com devolução</string>
    <string name="legenda_pedidoTelemarketing">Pedido feito pelo Telemarketing</string>
    <string name="nPedidoRcaErp">Nº Ped. RCA/ERP:</string>
    <string name="str_cliente">Cliente:</string>
    <string name="str_alvaraEmpty">Nada encontrado...</string>
    <string name="str_alvaraEmptyMsg">Não há alvarás para exibir,verifique com o responsável pelo ERP</string>
</resources>
