...
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/background_card"
            android:id="@+id/cardCliente">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_maxima_pessoas"/>
            <TextView
                android:layout_width="wrap_content"
...
